refactor main page

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,3 +1,10 @@
 {
-    "Language" : "English"
+    "Language": "English",
+    "header_services": "Service",
+    "header_about_us": "About us",
+    "header_porfolio": "Porfolio",
+    "header_contact": "Contact",
+    "main_title": "",
+    "main_description": "",
+    "main_btn": ""
 }
