--- a/src/locales/ua.json
+++ b/src/locales/ua.json
@@ -1,3 +1,10 @@
 {
-    "Language": "Українська"
+    "Language": "Українська",
+    "header_services": "Послуги",
+    "header_about_us": "Про нас",
+    "header_porfolio": "Портфоліо",
+    "header_contact": "Контакти",
+    "main_title": "Створення сайтів",
+    "main_description": "Створюємо сайти для різних потреб бізнесу. Розробляємо ui/ux дизайн, розробка сайту та його підтримка",
+    "main_btn": "Обговорити проєкт"
 }
