--- a/src/locales/ua.json
+++ b/src/locales/ua.json
@@ -6,5 +6,10 @@
     "header_contact": "Контакти",
     "main_title": "Створення сайтів",
     "main_description": "Створюємо сайти для різних потреб бізнесу. Розробляємо ui/ux дизайн, розробка сайту та його підтримка",
-    "main_btn": "Обговорити проєкт"
+    "main_btn": "Обговорити проєкт",
+    "develop_steps_title": "Як відбувається розробка:",
+    "develop_steps_description": "Розробка сайту допомагає автоматизувати багато процесів вашого бізнесу. В результаті ви отримуєте інструмент, який ідеально підходть під завдання саме вашому бізнесу, вирішує проблеми, оптимізовує процеси, спрощує управління компанією, покращує клієнтський досвід та виводить компанію на новий рівень.",
+    "call_me_back_title": "Замовте безкоштовну консультацію",
+    "call_me_back_description": "Звертайтеся до нас за безкоштовною консультацією, це можливість обговорити свої ідеї з нами і ми допоможемо створити ваш індивідуальний сайт. Залишайте свій номер, ми передзвонимо!",
+    "order_consultation": "Замовити консультацію"
 }
