--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -2,7 +2,7 @@
     "Language": "English",
     "header_services": "Service",
     "header_about_us": "About us",
-    "header_porfolio": "Porfolio",
+    "header_portfolio": "Porfolio",
     "header_contact": "Contact",
     "main_title": "",
     "main_description": "",
