--- a/src/locales/ua.json
+++ b/src/locales/ua.json
@@ -2,10 +2,10 @@
     "Language": "Українська",
     "header_services": "Послуги",
     "header_about_us": "Про нас",
-    "header_porfolio": "Портфоліо",
+    "header_portfolio": "Портфоліо",
     "header_contact": "Контакти",
-    "main_title": "Створення сайтів",
-    "main_description": "Створюємо сайти для різних потреб бізнесу. Розробляємо ui/ux дизайн, розробка сайту та його підтримка",
+    "main_title": "Bmax - Ваш надійний партнер",
+    "main_description": "Розробка ui/ux дизайну, підтримка та розробка сайтів  для різних потреб бізнесу",
     "main_btn": "Обговорити проєкт",
     "develop_steps_title": "Як відбувається розробка:",
     "develop_steps_description": "Розробка сайту допомагає автоматизувати багато процесів вашого бізнесу. В результаті ви отримуєте інструмент, який ідеально підходть під завдання саме вашому бізнесу, вирішує проблеми, оптимізовує процеси, спрощує управління компанією, покращує клієнтський досвід та виводить компанію на новий рівень.",
