--- a/src/locales/ua.json
+++ b/src/locales/ua.json
@@ -11,5 +11,10 @@
     "develop_steps_description": "Розробка сайту допомагає автоматизувати багато процесів вашого бізнесу. В результаті ви отримуєте інструмент, який ідеально підходть під завдання саме вашому бізнесу, вирішує проблеми, оптимізовує процеси, спрощує управління компанією, покращує клієнтський досвід та виводить компанію на новий рівень.",
     "call_me_back_title": "Замовте безкоштовну консультацію",
     "call_me_back_description": "Звертайтеся до нас за безкоштовною консультацією, це можливість обговорити свої ідеї з нами і ми допоможемо створити ваш індивідуальний сайт. Залишайте свій номер, ми передзвонимо!",
-    "order_consultation": "Замовити консультацію"
+    "order_consultation": "Замовити консультацію",
+    "contact_form_head_text": "Розкажіть нам свою ідею сайту",
+    "contact_form_sub_head_text": "Отримайте детальну та зрозумілу відповідь щодо втілення вашої ідеї",
+    "contact_form_head_success_text" : "Дякуємо, що обрали нас",
+    "contact_form_sub_head_success_text" : "Найближчим часом наш менеджер зв’яжиться з Вами для уточнення деталей.",
+    "btn_send": "Надіслати"
 }
