adaptive for mobile all site

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -16,5 +16,6 @@
     "contact_form_sub_head_text": "",
     "contact_form_head_success_text": "",
     "contact_form_sub_head_success_text": "",
-    "btn_send": "Send"
+    "btn_send": "Send",
+    "label_menu": "Menu"
 }
