--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,18 +4,21 @@
     "header_about_us": "About us",
     "header_portfolio": "Porfolio",
     "header_contact": "Contact",
-    "main_title": "",
-    "main_description": "",
-    "main_btn": "",
-    "develop_steps_title": "",
-    "develop_steps_description": "",
-    "call_me_back_title": "",
-    "call_me_back_description": "",
+    "main_title": "Main title",
+    "main_description": "Main description",
+    "main_btn": "Main btn",
+    "develop_steps_title": "develop step title",
+    "develop_steps_description": "Develop step description",
+    "call_me_back_title": "call me back title",
+    "call_me_back_description": "call me back description",
     "order_consultation": "Order a consultation",
-    "contact_form_head_text": "",
-    "contact_form_sub_head_text": "",
-    "contact_form_head_success_text": "",
-    "contact_form_sub_head_success_text": "",
+    "contact_form_head_text": "contact form head text",
+    "contact_form_sub_head_text": "contact_form_sub_head_text",
+    "contact_form_head_success_text": "contact_form_head_success_text",
+    "contact_form_sub_head_success_text": "contact_form_sub_head_success_text",
     "btn_send": "Send",
-    "label_menu": "Menu"
+    "label_menu": "Menu",
+    "about_us_before_ul_text": " <p class='componentSubtitle'> People who need an effective WEB page to facilitate the work of staff, automate business or advertise their brand and products on the Internet, turn to us because:<br /> </p>",
+    "about_us_ul": "<ul style='font-weight: 400; font-size: 20px; color: #ffffff'><li> We keep pace with the times, follow the latest developments and use only up-to-date technologies in our work;</li> <li>We value our customers and look for ways to fruitful cooperation with them;</li><li>We provide our services in a complex: from the creation of a website and the launch of a client's business on the Internet to the promotion and constant support of the project at a competitive level;</li> <li> We strive for development, so we regularly improve our service and expand the range of our services in accordance with the changing requirements of customers;</li><li>We provide opportunities for continuous business growth. Regardless of which site you started with to develop your business on the Internet, we will always find something to offer you. We will help expand the functionality of the site, make it unique and unlike others;</li> <li> We formed a team of specialists with many years of experience working in leading companies of Ukraine and the world; </li> </ul>",
+    "about_us_after_ul_text": " <p class='componentSubtitle'> <br /> Our work is focused on speed and quality. We set realistic deadlines necessary for high-quality performance of work and compliance with all requirements agreed with clients. That is why customers remain satisfied with the level of services received and continue to cooperate with us <br /><br />The best advertising for us is numerous positive reviews from grateful customers!</p>"
 }
