--- a/src/locales/ua.json
+++ b/src/locales/ua.json
@@ -20,5 +20,12 @@
     "label_menu": "Меню",
     "about_us_before_ul_text": " <p class='componentSubtitle'> Люди яким необхідна ефективна WEB – сторінка для полегшення роботи персоналу, автоматизації бізнесу чи реклама бренду та товарів в інтернеті, звертаються до нас, тому що:<br /> </p>",
     "about_us_ul": "<ul :style='$vuetify.breakpoint.xs ? `font-size: 16px;` : `font-size: 20px;`' style='font-weight: 400; color: #ffffff'><li> Ми крокуємо в ногу з часом, стежимо за новітніми розробками та використовуємо в роботі тільки актуальні технології; </li> <li>   Ми цінуємо своїх замовників і шукаємо шляхи для плідної співпраці з ними;</li><li> Ми надаємо свої послуги в комплексі: від створення сайту  та запуску клієнтського бізнесу в інтернеті до просування та постійної підтримки проекту на конкурентному рівні; </li> <li>  Ми прагнемо до розвитку, тому регулярно покращуємо сервіс та  розширюємо спектр наших послуг відповідно до того, як змінюються  вимоги клієнтів; </li><li> Ми надаємо можливості для постійного зростання бізнесу. Незалежно від того, з яким сайтом Ви розпочали розвиток свого бізнесу в інтернеті, ми завжди знайдемо, що Вам запропонувати. Ми допоможемо   розширити функціонал сайту, зробити його унікальним і несхожим на  інші; </li> <li> Ми сформували команду фахівців з багаторічним досвідом роботи у провідних компаніях України та світу </li> </ul>",
-    "about_us_after_ul_text": " <p class='componentSubtitle'> <br /> Наша робота орієнтована на швидкіст та якість. Ми ставимо реальні терміни, необхідні для якісного виконання роботи та дотримання всіх вимог, обумовлених із клієнтами. Саме тому замовники залишаються задоволеними рівнем отриманих послуг і продовжують співпрацю з нами. <br /><br /> Найкращою рекламою для нас є численні позитивні відгуки від вдячних клієнтів! </p>"
+    "about_us_after_ul_text": " <p class='componentSubtitle'> <br /> Наша робота орієнтована на швидкіст та якість. Ми ставимо реальні терміни, необхідні для якісного виконання роботи та дотримання всіх вимог, обумовлених із клієнтами. Саме тому замовники залишаються задоволеними рівнем отриманих послуг і продовжують співпрацю з нами. <br /><br /> Найкращою рекламою для нас є численні позитивні відгуки від вдячних клієнтів! </p>",
+    "why_they_choose_us": "Чому обирають нас",
+    "example_of_our_work": "Приклади наших робіт",
+    "our_contact": "Наші контакти",
+    "our_contact_description": "МИ ЗАВЖДІ РАДІ ЗАМОВЛЕННЯМ, НОВИМ ПРОПОЗИЦІЯМ ТА ВІДГУКАМ НАШИХ КЛІЄНТІВ",
+    "label_phone": "ТЕЛЕФОН:",
+    "label_write_to_us": "Напишіть нам:",
+    "label_visit_us": "Відвідайте нас:"
 }
