--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,28 +4,44 @@
     "header_about_us": "About us",
     "header_portfolio": "Porfolio",
     "header_contact": "Contact",
-    "main_title": "Main title",
-    "main_description": "Main description",
-    "main_btn": "Main btn",
-    "develop_steps_title": "develop step title",
-    "develop_steps_description": "Develop step description",
-    "call_me_back_title": "call me back title",
-    "call_me_back_description": "call me back description",
+    "main_title": "Bmax is your reliable partner",
+    "main_description": "Development of ui/ux design, support and development of sites for various business needs",
+    "main_btn": "Discuss the project",
+    "develop_steps_title": "How is the development going?",
+    "develop_steps_description": "The site helps to automate many processes of your business. As a result, you get a tool that is perfectly suited to the tasks of your business, solves problems, optimizes processes, simplifies company management, improves customer experience and takes the company to a new level.",
+    "call_me_back_title": "Order a free consultation",
+    "call_me_back_description": "Contact us for a free consultation, this is an opportunity to discuss your ideas with us and we will help create your individual website. Leave your number, we will call you back!",
     "order_consultation": "Order a consultation",
-    "contact_form_head_text": "contact form head text",
-    "contact_form_sub_head_text": "contact_form_sub_head_text",
-    "contact_form_head_success_text": "contact_form_head_success_text",
-    "contact_form_sub_head_success_text": "contact_form_sub_head_success_text",
+    "contact_form_head_text": "Tell us your idea for the site",
+    "contact_form_sub_head_text": "Get a detailed and clear answer about the implementation of your idea",
+    "contact_form_head_success_text": "Thank you for choosing us",
+    "contact_form_sub_head_success_text": "In the near future, our manager will contact you to clarify the details",
     "btn_send": "Send",
     "label_menu": "Menu",
     "about_us_before_ul_text": " <p class='componentSubtitle'> People who need an effective WEB page to facilitate the work of staff, automate business or advertise their brand and products on the Internet, turn to us because:<br /> </p>",
     "about_us_ul": "<ul :style='$vuetify.breakpoint.xs ? `font-size: 16px;` : `font-size: 20px;`' style='font-weight: 400; color: #ffffff'><li> We keep pace with the times, follow the latest developments and use only up-to-date technologies in our work;</li> <li>We value our customers and look for ways to fruitful cooperation with them;</li><li>We provide our services in a complex: from the creation of a website and the launch of a client's business on the Internet to the promotion and constant support of the project at a competitive level;</li> <li> We strive for development, so we regularly improve our service and expand the range of our services in accordance with the changing requirements of customers;</li><li>We provide opportunities for continuous business growth. Regardless of which site you started with to develop your business on the Internet, we will always find something to offer you. We will help expand the functionality of the site, make it unique and unlike others;</li> <li> We formed a team of specialists with many years of experience working in leading companies of Ukraine and the world; </li> </ul>",
     "about_us_after_ul_text": " <p class='componentSubtitle'> <br /> Our work is focused on speed and quality. We set realistic deadlines necessary for high-quality performance of work and compliance with all requirements agreed with clients. That is why customers remain satisfied with the level of services received and continue to cooperate with us <br /><br />The best advertising for us is numerous positive reviews from grateful customers!</p>",
-    "why_they_choose_us": "",
-    "example_of_our_work": "",
-    "our_contact": "",
-    "our_contact_description": "",
-    "label_phone": "",
-    "label_write_to_us": "",
-    "label_visit_us": ""
+    "why_they_choose_us": "Why choose us?",
+    "example_of_our_work": "Examples of our works",
+    "our_contact": "Our contacts",
+    "our_contact_description": "WE ARE ALWAYS GLAD ABOUT ORDERS, NEW OFFERS AND FEEDBACK FROM OUR CUSTOMERS",
+    "label_phone": "PHONE",
+    "label_write_to_us": "Write to us:",
+    "label_visit_us": "Visit us:",
+    "services_step_1": "",
+    "services_step_2": "",
+    "services_step_3": "",
+    "services_step_4": "",
+    "services_step_5": "",
+    "services_step_6": "",
+    "develop_step_title_1": "",
+    "develop_step_title_2": "",
+    "develop_step_title_3": "",
+    "develop_step_title_4": "",
+    "develop_step_title_5": "",
+    "develop_step_description_1": "",
+    "develop_step_description_2": "",
+    "develop_step_description_3": "",
+    "develop_step_description_4": "",
+    "develop_step_description_5": ""
 }
