--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -28,20 +28,22 @@
     "label_phone": "PHONE",
     "label_write_to_us": "Write to us:",
     "label_visit_us": "Visit us:",
-    "services_step_1": "",
-    "services_step_2": "",
-    "services_step_3": "",
-    "services_step_4": "",
-    "services_step_5": "",
-    "services_step_6": "",
-    "develop_step_title_1": "",
-    "develop_step_title_2": "",
-    "develop_step_title_3": "",
-    "develop_step_title_4": "",
-    "develop_step_title_5": "",
-    "develop_step_description_1": "",
-    "develop_step_description_2": "",
-    "develop_step_description_3": "",
-    "develop_step_description_4": "",
-    "develop_step_description_5": ""
+    "services_step_1": "Website development",
+    "services_step_2": "Development of UI/UX design",
+    "services_step_3": "Site promotion",
+    "services_step_4": "Website support",
+    "services_step_5": "Domain/hosting support",
+    "services_step_6": "Development of additional modules, options",
+    "develop_step_title_1": "Market analysis",
+    "develop_step_title_2": "Definition of requirements",
+    "develop_step_title_3": "Design and architecture development",
+    "develop_step_title_4": "Development",
+    "develop_step_title_5": "Testing",
+	"develop_step_title_6": "Implementation and support",	
+    "develop_step_description_1": "Study of competitors, definition of tasks and goals of the product, definition of the development plan",
+    "develop_step_description_2": "Determination of requirements for the project, survey of the customer, determination of the product usage scenario, development of the technical task",
+    "develop_step_description_3": "Prototyping, user interface development",
+    "develop_step_description_4": "Layout of pages, backend/front end development, work with databases",
+    "develop_step_description_5": "Modular/integration testing of a software product, error correction, optimization",
+	"develop_step_description_6": "Integration into the operating environment, software product support"
 }
