--- a/src/locales/ua.json
+++ b/src/locales/ua.json
@@ -28,20 +28,23 @@
     "label_phone": "ТЕЛЕФОН:",
     "label_write_to_us": "Напишіть нам:",
     "label_visit_us": "Відвідайте нас:",
-    "services_step_1": "Розробка сайтів",
+    "services_step_1": "Розробка веб - сайтів",
     "services_step_2": "Розробка UI/UX дизайну",
     "services_step_3": "Просування сайту",
     "services_step_4": "Підтримка сайтів",
     "services_step_5": "Домен/хостинг підтримка",
     "services_step_6": "Розробка додаткових модулів, опцій",
     "develop_step_title_1": "Аналіз ринку",
-    "develop_step_title_2": "Створення дизайну та архітектури",
-    "develop_step_title_3": "Розробка",
-    "develop_step_title_4": "Тестування",
-    "develop_step_title_5": "Впровадження та супровід",
-    "develop_step_description_1": "",
-    "develop_step_description_2": "",
-    "develop_step_description_3": "",
-    "develop_step_description_4": "",
-    "develop_step_description_5": ""
+    "develop_step_title_2": "Визначення вимог",
+    "develop_step_title_3": "Розробка дизайну та архітектури",
+    "develop_step_title_4": "Розробка",
+    "develop_step_title_5": "Тестування",
+	"develop_step_title_6": "Впровадження та супровід",
+    "develop_step_description_1": "Вивчення конкурентів,визначення завдань та цілей продукту,визначення плану розробки",
+    "develop_step_description_2": "Визначення вимог до проекту, опитування замовника,визначення сценарію використання продукту, розробка технічного завдання",
+    "develop_step_description_3": "Прототипування, розробка інтерфейсу користувача,",
+    "develop_step_description_4": "Верстка сторінок, backend/front end розробка, робота з базами даних",
+    "develop_step_description_5": "Модульне/інтеграційне тестування програмного продукту,виправлення помилок, оптимізація",
+	"develop_step_description_6": "Інтеграція в середовище функціонування, підтримка продукту"
+	
 }
